Updated gruntfile, fixed GDPR link visibility issue.

--- a/bk-less-dev.less
+++ b/bk-less-dev.less
@@ -93,12 +93,9 @@
 
 
 // -----------------------------
-// BaseKit LESS Framework: v1.0
+// BaseKit LESS Framework: V1
 // -----------------------------
 
-// -----------------------------
-// Core Import
-// -----------------------------
 
 // Reset: Normalize & Typeset
 // --------------------
@@ -2081,6 +2078,7 @@ body:after {
     }
 }
 
+
 // -------------------------
 // CORE: GDPR Forms
 // -------------------------
@@ -2130,6 +2128,15 @@ body:after {
         line-height: 1;
         padding: 15px;
         text-decoration: none;
+    }
+}
+
+
+.bgImageFullscreen,
+.bgImageOriginal {
+
+    .gdpr-footer {
+        background-color: @color-swatch1;
     }
 }
 
@@ -2863,6 +2870,8 @@ hr.rule {
 .wysiwyg-font-size-x-large { font-size: 28px; }
 
 .wysiwyg-font-size-xx-large { font-size: 30px; }
+
+
 
 
 // -----------------------------
@@ -3632,4 +3641,3 @@ button.icon--add.added {
 
 
  // Ecommerce
-
