--- a/bk-less-framework.less
+++ b/bk-less-framework.less
@@ -1,10 +1,7 @@
 // -----------------------------
-// BaseKit LESS Framework: v1.0
+// BaseKit LESS Framework: V1
 // -----------------------------
 
-// -----------------------------
-// Core Import
-// -----------------------------
 
 // Reset: Normalize & Typeset
 // --------------------
@@ -1987,6 +1984,7 @@ body:after {
     }
 }
 
+
 // -------------------------
 // CORE: GDPR Forms
 // -------------------------
@@ -2036,6 +2034,15 @@ body:after {
         line-height: 1;
         padding: 15px;
         text-decoration: none;
+    }
+}
+
+
+.bgImageFullscreen,
+.bgImageOriginal {
+
+    .gdpr-footer {
+        background-color: @color-swatch1;
     }
 }
 
@@ -2769,6 +2776,8 @@ hr.rule {
 .wysiwyg-font-size-x-large { font-size: 28px; }
 
 .wysiwyg-font-size-xx-large { font-size: 30px; }
+
+
 
 
 // -----------------------------
@@ -3538,4 +3547,3 @@ button.icon--add.added {
 
 
  // Ecommerce
-
