--- a/core/gdpr.less
+++ b/core/gdpr.less
@@ -1,3 +1,4 @@
+
 // -------------------------
 // CORE: GDPR Forms
 // -------------------------
@@ -47,5 +48,14 @@
         line-height: 1;
         padding: 15px;
         text-decoration: none;
+    }
+}
+
+
+.bgImageFullscreen,
+.bgImageOriginal {
+
+    .gdpr-footer {
+        background-color: @color-swatch1;
     }
 }
